k8s/dev/dev-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiwi-backend-dev
  namespace: dev 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: kiwi-backend-dev
  template:
    metadata:
      labels:
        app: kiwi-backend-dev
    spec:
      serviceAccountName: kiwi-ci-cd-service-account
      containers:
      - name: kiwi-backend-dev
        image: teambellako/kiwi-project:backend-dev-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: dockerhub-secret
