k8s/dev/dev-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiwi-frontend-dev
  namespace: dev 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiwi-frontend-dev
  template:
    metadata:
      labels:
        app: kiwi-frontend-dev
    spec:
      serviceAccountName: kiwi-ci-cd-service-account
      containers:
      - name: kiwi-frontend-dev
        image: teambellako/kiwi-project:frontend-dev-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
      imagePullSecrets:
        - name: dockerhub-secret
