k8s/dev/dev-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiwi-mysql-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiwi-mysql-dev
  template:
    metadata:
      labels:
        app: kiwi-mysql-dev
    spec:
      volumes:
        - name: kiwi-mysql-dev-data
          persistentVolumeClaim:
            claimName: kiwi-mysql-dev-pvc
      containers:
      - name: kiwi-mysql-dev
        image: mysql:8.0
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: kiwi-mysql-dev-data
            mountPath: /var/lib/mysql
