k8s/dev/dev-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwi-backend-dev-service
  namespace: dev 
spec:
  selector:
    app: kiwi-backend-dev 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
