k8s/dev/dev-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwi-frontend-dev-service
  namespace: dev 
spec:
  selector:
    app: kiwi-frontend-dev
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 5173
  type: NodePort
