k8s/dev/dev-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwi-mysql-dev-service
  namespace: dev 
spec:
  type: NodePort
  selector:
    app: kiwi-mysql-dev
  ports:
    - protocol: TCP
      port: 3306 
      targetPort: 3306
      nodePort: 30306
