k8s/dev/dev-traefik-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: traefik
