k8s/dev/dev-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30001 
    - name: websecure
      port: 443
      targetPort: 443
      nodePort: 30002 
  selector:
    app: traefik
  type: NodePort
