k8s/dev/dev-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-frontend-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
spec:
  rules:
  - host: dev.kiwibellako.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiwi-frontend-dev-service 
            port:
              number: 80
