k8s/dev/dev-traefik-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dev.kiwibellako.com`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 8080
